--- a/src/main/resources/com/example/poprojekt/MainFrame.fxml
+++ b/src/main/resources/com/example/poprojekt/MainFrame.fxml
@@ -8,8 +8,9 @@
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
+<?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/19.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.poprojekt.FXController.MainFrame">
+<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.example.poprojekt.FXController.MainFrame">
    <children>
       <BorderPane fx:id="borderPane" prefHeight="552.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <right>
@@ -41,6 +42,13 @@
                      </font>
                   </Button>
                   <Label fx:id="error" layoutX="9.0" layoutY="217.0" prefHeight="17.0" prefWidth="118.0" style="-fx-text-fill: red;" text="Podaj poprawne dane" visible="false" />
+                  <Text layoutX="15.0" layoutY="265.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ilość:" />
+                  <Text layoutX="16.0" layoutY="282.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Owiec:" />
+                  <Text layoutX="16.0" layoutY="303.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Wilków:" />
+                  <Text fx:id="shepCount" layoutX="61.0" layoutY="283.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" />
+                  <Text fx:id="wolfsCount" layoutX="61.0" layoutY="304.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" />
+                  <Text layoutX="15.0" layoutY="323.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Ruchów:" />
+                  <Text fx:id="roundCount" layoutX="61.0" layoutY="324.0" strokeType="OUTSIDE" strokeWidth="0.0" text="0" />
                </children>
             </Pane>
          </right>
